# mcstft

./: LICENCE  README.md  pyproject.toml
src/mcstft/: __about__.py  __init__.py  lib.py
